@@ -1,6 +1,7 @@
 0.2.2
 -----
 1. Update version of tag reader library.
+2. Update version of bliss library.
 
 0.2.1
 -----
